--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2018"
 [dependencies]
 ansi_term = "0.12.1"
 itertools = "0.8.2"
-rlifesrc-lib = "0.2.0"
+rlifesrc-lib = { version = "0.2.1", features = ["serialize"] }
+serde_json = "1.0.44"
 stopwatch = "0.0.7"
 structopt = "0.3.5"
 term_size = "0.3.1"
