--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "0.12.1"
-rlifesrc-lib = { version = "0.3.4", features = ["serialize"] }
-serde_json = "1.0.59"
+rlifesrc-lib = { version = "0.3.5", features = ["serde"] }
+serde_json = "1.0.61"
 stopwatch = "0.0.7"
-structopt = "0.3.20"
+structopt = "0.3.21"
 term_size = "0.3.2"
