--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 ansi_term = "0.12.1"
-rlifesrc-lib = { version="0.5.0", features=["serde"] }
+anyhow = "1.0.42"
+rlifesrc-lib = { version = "0.5.0", features = ["serde"] }
 serde_json = "1.0.64"
 stopwatch = "0.0.7"
 structopt = "0.3.22"
